WebShop.API/src/main/java/com/example/webshopapi/error/exception/ProductNotFoundException.java
package com.example.webshopapi.error.exception;

public class ProductNotFoundException extends RuntimeException {
    public ProductNotFoundException(String message) {
        super(message);
    }
}